--- a/workflows/build_on_push.yml
+++ b/workflows/build_on_push.yml
@@ -1,23 +1,18 @@
 # workflow name
 name: Test on Push
-
-#workflow is ex
-on:
-	push:
-		branches:
-			-feature/*
-
-#jobs are run independently of one another
-jobs:
-	test:
-		#target machine on which job is run
-		runs-on: ubuntu-latest
-		steps:
-			#steps runs a premade action 
-			- name: Login to Docker Registry
-			  uses: azure/docker-login@v1
-			  with:
-				login-server: docker.pkg.github.com
-				username: $GITHUB_ACTOR
-				#Acces the github actors acces token
-				password: ${{ secrets.GITHUB_TOKEN }}
+# workflow is executed on every push to a feature branch
+on: push:
+branches:
+- feature/*
+# jobs are run independently of one another
+jobs: test:
+    # target machine on which job is run
+runs-on: ubuntu-latest steps:
+      # step runs a premade Action to checkout the repo
+- uses: actions/checkout@v2
+      # custom steps that run in a shell
+- name: Install Dependencies run: |
+make dependencies.install
+- name: Run Tests
+        run: |
+          make test
